@@ -30,7 +30,7 @@ public class CMDHDParser
 			for(int h2=0;h2<16;h2++)
 			{
 				HEX[(h*16)+h2]=""+HEX_DIG.charAt(h)+HEX_DIG.charAt(h2);
-				ANTI_HEX.put(HEX[(h*16)+h2],new Short((short)((h*16)+h2)));
+				ANTI_HEX.put(HEX[(h*16)+h2],Short.valueOf((short)((h*16)+h2)));
 			}
 	}
 	private static void instructOut()
